gccida/c0/fold_binary_op_with_conditional_arg
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5305:44: error: must use 'enum' tag to refer to type 'tree_code'
tree  fold_binary_op_with_conditional_arg( tree_code code, tree type, tree cond, tree arg, int cond_first_p) 
                                           ^
                                           enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5307:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5308:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5309:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5310:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5311:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5314:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tt; // [rsp+10h] [rbp-A0h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5315:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *testtype; // [rsp+18h] [rbp-98h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5316:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rhs_type; // [rsp+20h] [rbp-90h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5317:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *lhs_type; // [rsp+28h] [rbp-88h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5318:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code rhs_code; // [rsp+30h] [rbp-80h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5319:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code lhs_code; // [rsp+34h] [rbp-7Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5333:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code codea; // [rsp+A4h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5369:25: error: expected expression
lhs_type = ( tree_node *)*( &global_trees + 27); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5369:14: error: use of undeclared identifier 'tree_node'
lhs_type = ( tree_node *)*( &global_trees + 27); 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5375:25: error: expected expression
rhs_type = ( tree_node *)*( &global_trees + 27); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/fold-const.c:5375:14: error: use of undeclared identifier 'tree_node'
rhs_type = ( tree_node *)*( &global_trees + 27); 
             ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fold_binary_op_with_conditional_arg/src/obj/fold-const.o] Error 1
